updated phones page

--- a/pages/phones/iphone-xr-64gb.html
+++ b/pages/phones/iphone-xr-64gb.html
@@ -96,27 +96,73 @@
             <section class="section1">
 
                 <div class="phones-carousel">
-
+                    <img src="../../images/iphone/iPhone-XR-64GB.jpg" alt="">
                 </div>
 
                 <div class="phones-information">
                     
-                    <!-- <div class="text">
+                    <div class="text">
                         <h1>iPhone XR 64GB ( Black )</h1>
-                        <p class="storage">საწყობი: <span>მარაგშია</span></p>
-                        <p class="condition-p">მდგომარეობა: <span>მეორადი</span></p>
-                        <p class="with-phone">რა მოყვება ტელეფონს:</p>
-                        <p class="usb">⚡ USB კაბელი ( A კატეგორიას და B კატეგორიას )</p>
-                        <p class="screen-protector">🎁 ბრონი საჩუქრად</p>
-                        <p class="delivery">✈️ უფასო მიწოდება მთელი ქვეყნის ტერიტორიაზე A და B კატეგორიაზე </p>
-                    </div> -->
+                        <div class="top">
+                            <p class="storage">საწყობი: <span class="in-storage">მარაგშია</span></p>
+                            <p class="condition-p">მდგომარეობა: <span>მეორადი</span></p>
+                        </div>
+                      
+                        <div class="bottom">
+                            <p class="with-phone">რა მოყვება ტელეფონს:</p>
+                            <p class="usb">⚡ USB კაბელი ( A კატეგორიას და B კატეგორიას )</p>
+                            <p class="screen-protector">🎁 ბრონი საჩუქრად</p>
+                            <p class="delivery">✈️ უფასო მიწოდება მთელი ქვეყნის ტერიტორიაზე A და B კატეგორიაზე </p>
+                        </div>
+                    </div>
 
                     <div class="condition">
+
+                        <button class="a-class">
+                            <div class="left">
+                                <h1>A</h1>
+                                <p>ახალივით მდგომარეობაში 9.5/10</p>
+                            </div>
+
+                            <div class="right">
+                                <h2>699 ₾</h2>
+                            </div>
+                        </button>
+
+                        <button class="b-class">
+                            <div class="left">
+                                <h1>B</h1>
+                                <p>მცირედი მოხმარების კვალით 8/10</p>
+                            </div>
+
+                            <div class="right">
+                                <h2>599 ₾</h2>
+                            </div>
+                        </button>
+
+                        <button class="c-class">
+                            <div class="left">
+                                <h1>C</h1>
+                                <p>შესამჩნევი მოხმარების კვალი 6/10</p>
+                            </div>
+
+                            <div class="right">
+                                <h2>499 ₾</h2>
+                            </div>
+                        </button>
 
                     </div>
 
                     <div class="payment">
+                        <div class="payment-text">
+                            <h1>განვადების გასაკეთებლად აირჩიეთ ბანკი</h1>
+                        </div>
 
+                        <div class="payment-images">
+                            <img class="credo" src="../../images/main-images/credo.svg" alt="credo-bank">
+                            <img class="tbc" src="../../images/main-images/tbc-paymenet.jpg" alt="tbc-bank">
+                            <img class="bog" src="../../images/main-images/bog.svg" alt="bank-of-georgia">
+                        </div>
                     </div>
 
                 </div>
