updated phones page

--- a/pages/phones/iphone-xr-64gb.html
+++ b/pages/phones/iphone-xr-64gb.html
@@ -220,6 +220,19 @@
                             </div>
                         </div>
 
+                        <div class="left-div">
+                            <div class="comment-wrap">    
+                                <div class="img-div">
+                                   <img src="../../images/main-images/profile-icon.jpg" alt="user-profile-icon">
+                                </div>
+
+                                <div class="text-wrap">
+                                    <p><strong>გიორგი</strong> - <span>14/04/2024</span></p>
+                                    <p>განვადების გაკეთება მინდა</p>
+                                </div>
+                            </div>
+                        </div>
+
                        
                     </div>
 
@@ -230,19 +243,27 @@
                         </div>
 
                         <div class="comment-text">
-
+                            <textarea name="comment" id="id-comment"></textarea>
                         </div>
 
                         <div class="user-mail">
 
+                            <div class="input-text">
+                                <label for="">სახელი<span>*</span></label>
+                                <input name="author" id="author" type="text">
+                            </div>
+
+                            <div class="input-text">
+                                <label for="mail">ელფოსტა<span>*</span></label>
+                                <input name="mail" id="mail" type="text">
+                            </div>
+
                         </div>
 
                         <div class="bottom-text">
-
-                        </div>
-
-                        <div class="button">
-
+                            <input type="checkbox" name="checkbox" id="checkbox">
+                            <label for="checkbox"> ჩემი სახელის. ელფოსტისა და ვებ-გვერდის მისამართის შენახვა ამ ბრაუზერში შემდგომში კომენტარებში გამოსაყენებლად.</label>
+                            <input name="submit" type="button" class="submit"  value="გაგზავნა">
                         </div>
 
                     </div>
