added hover effects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                     <div class="icon">
                        <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                        <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
+                        <img src="images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon">
                     </div>
 
 
@@ -40,17 +40,17 @@
 
                     <div class="header-img">
                         <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                        <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
+                        <img src="images/main-images/elitmobimain.png" class="elitmob-icon" class="elitmob-icon" alt="elitmobi icon">
                     </div>
 
                     <div class="top-nav">
                         <nav>
-                        <ul>
-                            <li><a class="header-main">მთავარი</a></li>
-                            <li><a href="pages/news.html">ELIT NEWS   </a></li>
-                            <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
-                            <li><a href="pages/contact.html">კონტაქტი</a></li>
-                        </ul>
+                            <ul>
+                                <li><a class="header-main">მთავარი</a></li>
+                                <li><a href="pages/news.html">ELIT NEWS   </a></li>
+                                <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
+                                <li><a href="pages/contact.html">კონტაქტი</a></li>
+                            </ul>
                         </nav>
                     </div>
 
@@ -616,7 +616,7 @@
             <footer class="footer">
                 <div class="footer-wrap">
                     <div class="footer-image">
-                        <a href="index.html"><img src="images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                        <a href="index.html"><img src="images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                     </div>
 
                     <div class="footer-location">
