--- a/pages/apple.html
+++ b/pages/apple.html
@@ -26,7 +26,7 @@
 
                 <div class="icon">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                    <a href="../index.html"><img src="../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
 
@@ -39,7 +39,7 @@
 
                 <div class="header-img">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                    <a href="../index.html"><img src="../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
                 <div class="top-nav">
