--- a/pages/news.pages/apple-2022.html
+++ b/pages/news.pages/apple-2022.html
@@ -25,7 +25,7 @@
 
                 <div class="icon">
                      <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
 
@@ -38,7 +38,7 @@
 
                 <div class="header-img">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
                 <div class="top-nav">
@@ -130,7 +130,7 @@
         <footer class="footer">
             <div class="footer-wrap">
                 <div class="footer-image">
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
                 <div class="footer-location">
