--- a/pages/news.pages/samsung-galaxy-ring.html
+++ b/pages/news.pages/samsung-galaxy-ring.html
@@ -25,7 +25,7 @@
 
                 <div class="icon">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <img src="../../../images/main-images/elitmobimain.png" alt="elitmobi icon">
+                    <img src="../../../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon">
                 </div>
 
 
@@ -38,7 +38,7 @@
 
                 <div class="header-img">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
                 <div class="top-nav">
