--- a/pages/phones/iphone-xr-64gb.html
+++ b/pages/phones/iphone-xr-64gb.html
@@ -184,7 +184,7 @@
                         <div class="left-div">
                             <div class="comment-wrap">    
                                 <div class="img-div">
-                                   <img src="../../images/main-images/profile-icon.jpg" alt="user-profile-icon">
+                                   <img src="../../images/main-images/profile-icon.png" alt="user-profile-icon">
                                 </div>
 
                                 <div class="text-wrap">
@@ -197,7 +197,7 @@
                         <div class="left-div">
                             <div class="comment-wrap">    
                                 <div class="img-div">
-                                    <img src="../../images/main-images/profile-icon.jpg" alt="user-profile-icon">
+                                    <img src="../../images/main-images/profile-icon.png" alt="user-profile-icon">
                                 </div>
 
                                 <div class="text-wrap">
@@ -210,7 +210,7 @@
                         <div class="left-div">
                             <div class="comment-wrap">    
                                 <div class="img-div">
-                                    <img src="../../images/main-images/profile-icon.jpg" alt="user-profile-icon">
+                                    <img src="../../images/main-images/profile-icon.png" alt="user-profile-icon">
                                 </div>
 
                                 <div class="text-wrap">
@@ -223,7 +223,7 @@
                         <div class="left-div">
                             <div class="comment-wrap">    
                                 <div class="img-div">
-                                   <img src="../../images/main-images/profile-icon.jpg" alt="user-profile-icon">
+                                   <img src="../../images/main-images/profile-icon.png" alt="user-profile-icon">
                                 </div>
 
                                 <div class="text-wrap">
@@ -279,7 +279,7 @@
         <footer class="footer">
             <div class="footer-wrap">
                 <div class="footer-image">
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" class="elitmob-icon" alt="elitmobi icon"></a>
                 </div>
 
                 <div class="footer-location">
