updated phone pages

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="section-3-div">
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/samsung-galaxy-s10-128gb.html">
                             <img src="images/samsung/Samsung-Galaxy-s10.png" alt="Samsung-Galaxy-s10">   
                             <p>Samsung Galaxy s10 128GB ( black )</p>
                             </a>
@@ -178,7 +178,7 @@
                         </div>
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/samsung-galaxy-s21-ultra-128gb.html">
                             <img src="images/samsung/s21-Ultra-Black-1.jpg" alt="samsung-galaxy-s21">     
                             <p>Samsung Galaxy s21 Ultra 128GB ( Phantom Black )</p>
                             </a>
@@ -186,7 +186,7 @@
                         </div>
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/iphone-11-64gb-black.html">
                                 <img src="images/iphone/iPhone-11-Black-.jpg" alt="iphone-11">   
                                 <p>iPhone 11 64GB ( Black )</p>
                             </a>
@@ -194,7 +194,7 @@
                         </div>
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/samsung-galaxy-s20-fe-128gb.html">
                                 <img src="images/samsung/samsung-galaxy-s20.jpg" alt="samsung-galaxy-s20">
                                 <p>Samsung Galaxy s20 FE 128GB ( Cloud Navy )</p>
                             </a>
@@ -202,7 +202,7 @@
                         </div>
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/iphone-12-64gb-black.html">
                                 <img src="images/iphone/iPhone-12-black.jpg" alt="iPhone-12-black">
                                 <p>iPhone 12 64GB ( Black )</p>
                             </a>
@@ -210,7 +210,7 @@
                         </div>
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/samsung-galaxy-s22-128gb-black.html   ">
                                 <img src="images/samsung/samsung-galaxy-s22-Black.jpg" alt="samsung-galaxy-s22-Black">
                                 <p>Samsung Galaxy s22 128GB ( Black )</p>
                             </a>
@@ -218,7 +218,7 @@
                         </div>
 
                         <div>
-                            <a href="">
+                            <a href="pages/phones/iphone-11-pro-64gb-space-gray.html">
                                 <img src="images/iphone/iPhone-11-Pro-Gray.jpg" alt="iPhone-11-Pro-Gray">
                                 <p>iPhone 11 Pro 64GB ( Space Gray )</p>
                             </a>
