main page details

--- a/pages/news.html
+++ b/pages/news.html
@@ -290,6 +290,10 @@
 
     </div>
 
+    <div class="scroll-button">
+        <a href="#" class="scroll-on-top"><i class="fa-solid fa-angle-up"></i></a>
+      </div>
+
     <script src="../js/main.js"></script>
 </body>
 </html>
