--- a/pages/samsung.html
+++ b/pages/samsung.html
@@ -229,6 +229,12 @@
 
     </div>
 
+
+    <div class="scroll-button">
+        <a href="#" class="scroll-on-top"><i class="fa-solid fa-angle-up"></i></a>
+      </div>
+
+
     <script src="../js/main.js"></script>
 </body>
 </html>
