--- a/pages/news.pages/apple-2022.html
+++ b/pages/news.pages/apple-2022.html
@@ -30,7 +30,7 @@
 
 
                 <div class="search">
-                    <a href=""><i class="fa-solid fa-magnifying-glass search-icon"></i></a>
+                    <i class="fa-solid fa-magnifying-glass search-icon"></i>
                 </div>
             </div>
 
