--- a/pages/samsung.html
+++ b/pages/samsung.html
@@ -31,7 +31,7 @@
 
 
                 <div class="search">
-                    <a href=""><i class="fa-solid fa-magnifying-glass search-icon"></i></a>
+                    <i class="fa-solid fa-magnifying-glass search-icon"></i>
                 </div>
             </div>
 
