--- a/pages/contact.html
+++ b/pages/contact.html
@@ -120,14 +120,17 @@
 
                 <div class="right"> 
                     <div class="map">
-                        <iframe class="iframe" src="https://www.google.com/maps/embed?
+                        <!-- <iframe class="iframe" src="https://www.google.com/maps/embed?
                         pb=!1m18!1m12!1m3!1d1252.0252467972846!2d44.790
                         3993137506!3d41.724086453148175!2m3!1f0!2f0!3f0
                         !3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404473ac83
                         e7580f%3A0x591849ddec5b81d0!2sElit%20Mobi!5e0!3
                         m2!1sen!2sge!4v1639649267445!5m2!1sen!2sge" 
                         width="800" height="300" style="border:0;" 
-                        allowfullscreen="" loading="lazy"></iframe>
+                        allowfullscreen="" loading="lazy"></iframe> -->
+
+
+                        <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.816768238073!2d44.78818917526466!3d41.724472575020165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404473ac83e7580f%3A0x591849ddec5b81d0!2sElit%20Mobi!5e0!3m2!1sen!2sge!4v1720097490298!5m2!1sen!2sge" width="800" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </section>
