--- a/pages/apple.html
+++ b/pages/apple.html
@@ -105,7 +105,7 @@
                         <div class="phones-div">
 
                             <div>
-                                <a href="">
+                                <a href="../pages/phones/iphone-xr-64gb.html">
                                     <img src="../images/iphone/iPhone-XR-64GB.jpg" alt="iphone-xr">
                                     <p>iPhone XR 64GB ( Black )</p>
                                 </a>
@@ -113,7 +113,7 @@
                             </div>
 
                             <div>
-                                <a href="">
+                                <a href="../pages/phones/iphone-11-64gb-black.html">
                                     <img src="../images/iphone/iPhone-11-Black-.jpg" alt="iphone-11">   
                                     <p>iPhone 11 64GB ( Black )</p>
                                 </a>
@@ -121,7 +121,7 @@
                             </div>
 
                             <div>
-                                <a href="">
+                                <a href="../pages/phones/iphone-12-64gb-black.html">
                                     <img src="../images/iphone/iPhone-12-black.jpg" alt="iPhone-12-black">
                                     <p>iPhone 12 64GB ( Black )</p>
                                 </a>
