--- a/pages/apple.html
+++ b/pages/apple.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ჩვენს შესახებ - elitmobi.ge</title>
+    <title>ეფლი-apple - elitmobi.ge</title>
     <link rel="shortcut icon" href="../images/main-images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
